// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webhooks .NET snippet generation net6 request should match fixture for "empty" 1`] = `Object {}`;

exports[`webhooks .NET snippet generation net6 request should match fixture for "empty-default" 1`] = `
Object {
  "security": Object {
    "petstore_auth": Object {
      "line": 31,
    },
  },
  "server": Object {
    "name": Object {
      "line": 28,
    },
  },
}
`;

exports[`webhooks .NET snippet generation net6 request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 33,
    },
    "petstore_auth": Object {
      "line": 32,
    },
  },
  "server": Object {
    "name": Object {
      "line": 28,
    },
    "port": Object {
      "line": 29,
    },
  },
}
`;

exports[`webhooks .NET snippet generation net6 request should match fixture for "security-types" 1`] = `
Object {
  "security": Object {
    "api_key": Object {
      "line": 28,
    },
    "http_basic": Object {
      "line": 29,
    },
    "http_bearer": Object {
      "line": 30,
    },
    "oauth2": Object {
      "line": 31,
    },
  },
}
`;

exports[`webhooks .NET snippet generation net6 request should match fixture for "security-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 29,
    },
    "petstore_auth": Object {
      "line": 28,
    },
  },
}
`;

exports[`webhooks .NET snippet generation net6 request should match fixture for "server-variables" 1`] = `
Object {
  "server": Object {
    "name": Object {
      "line": 28,
    },
    "port": Object {
      "line": 29,
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "empty" 1`] = `Object {}`;

exports[`webhooks Node.js snippet generation express request should match fixture for "empty-default" 1`] = `
Object {
  "security": Object {
    "petstore_auth": Object {
      "line": 24,
    },
  },
  "server": Object {
    "name": Object {
      "line": 21,
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 26,
    },
    "petstore_auth": Object {
      "line": 25,
    },
  },
  "server": Object {
    "name": Object {
      "line": 21,
    },
    "port": Object {
      "line": 22,
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-types" 1`] = `
Object {
  "security": Object {
    "api_key": Object {
      "line": 21,
    },
    "http_basic": Object {
      "line": 22,
    },
    "http_bearer": Object {
      "line": 23,
    },
    "oauth2": Object {
      "line": 24,
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 22,
    },
    "petstore_auth": Object {
      "line": 21,
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "server-variables" 1`] = `
Object {
  "server": Object {
    "name": Object {
      "line": 21,
    },
    "port": Object {
      "line": 22,
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "empty" 1`] = `Object {}`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "empty-default" 1`] = `
Object {
  "security": Object {
    "petstore_auth": Object {
      "line": 27,
    },
  },
  "server": Object {
    "name": Object {
      "line": 24,
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 29,
    },
    "petstore_auth": Object {
      "line": 28,
    },
  },
  "server": Object {
    "name": Object {
      "line": 24,
    },
    "port": Object {
      "line": 25,
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "security-types" 1`] = `
Object {
  "security": Object {
    "api_key": Object {
      "line": 24,
    },
    "http_basic": Object {
      "line": 25,
    },
    "http_bearer": Object {
      "line": 26,
    },
    "oauth2": Object {
      "line": 27,
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "security-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 25,
    },
    "petstore_auth": Object {
      "line": 24,
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "server-variables" 1`] = `
Object {
  "server": Object {
    "name": Object {
      "line": 24,
    },
    "port": Object {
      "line": 25,
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "empty" 1`] = `Object {}`;

exports[`webhooks Python snippet generation flask request should match fixture for "empty-default" 1`] = `
Object {
  "security": Object {
    "petstore_auth": Object {
      "line": 37,
    },
  },
  "server": Object {
    "name": Object {
      "line": 34,
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 39,
    },
    "petstore_auth": Object {
      "line": 38,
    },
  },
  "server": Object {
    "name": Object {
      "line": 34,
    },
    "port": Object {
      "line": 35,
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "security-types" 1`] = `
Object {
  "security": Object {
    "api_key": Object {
      "line": 34,
    },
    "http_basic": Object {
      "line": 35,
    },
    "http_bearer": Object {
      "line": 36,
    },
    "oauth2": Object {
      "line": 37,
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "security-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 35,
    },
    "petstore_auth": Object {
      "line": 34,
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "server-variables" 1`] = `
Object {
  "server": Object {
    "name": Object {
      "line": 34,
    },
    "port": Object {
      "line": 35,
    },
  },
}
`;
